gcc/testsuite/gdc.test/compilable/imports/test9919a.d
module imports.test9919a;

import imports.test9919c;
