gcc/testsuite/gdc.test/fail_compilation/imports/ice7782algorithm.d
module imports.ice7782algorithm;

import imports.ice7782range;
